// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlantUML markdown extensions renders a plantuml codeblock 1`] = `
<div>
  <img
    alt="uml diagram"
    src="https://example.org/svg/SoWkIImgAStDuKhEIImkLd2jICmjo4dbSaZDIm6A0W00"
  />
  

</div>
`;

exports[`PlantUML markdown extensions renders an error if no server is defined 1`] = `
<div>
  This is a mock for "TranslatedApplicationErrorAlert". Props: {"errorI18nKey":"renderer.plantuml.notConfigured"}
</div>
`;
